--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-scripts": "2.1.3",
+    "styled-components": "^4.1.3",
+    "typescript": "3.3.1"
+  },
+  "devDependencies": {
     "@types/jest": "23.3.13",
     "@types/node": "10.12.21",
     "@types/react": "16.8.1",
     "@types/react-dom": "16.0.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "typescript": "3.3.1"
+    "@types/styled-components": "^4.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,8 +30,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "styled-components": "^4.1.3"
-  }
+  ]
 }
