--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "styled-components": "^4.1.3",
     "typescript": "3.3.1"
@@ -14,6 +15,7 @@
     "@types/node": "10.12.21",
     "@types/react": "16.8.1",
     "@types/react-dom": "16.0.11",
+    "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.6"
   },
   "scripts": {
