--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3",
+    "styled-components": "4.1.3",
     "typescript": "3.3.1"
   },
   "devDependencies": {
     "@types/jest": "23.3.13",
     "@types/node": "10.12.21",
-    "@types/react": "16.8.1",
+    "@types/react": "16.8.2",
     "@types/react-dom": "16.0.11",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.6"
+    "@types/react-router-dom": "4.3.1",
+    "@types/styled-components": "4.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
