--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/react": "16.8.2",
     "@types/react-dom": "16.0.11",
     "@types/react-router-dom": "4.3.1",
-    "@types/styled-components": "4.1.6"
+    "@types/styled-components": "4.1.6",
+    "mdx.macro": "^0.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
