--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "color": "^3.1.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "react-router-dom": "4.3.1",
@@ -11,6 +12,7 @@
     "typescript": "3.3.1"
   },
   "devDependencies": {
+    "@types/color": "^3.0.0",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
