--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "mdx.macro": "^0.2.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set \"NODE_PATH=./\" && react-scripts start",
+    "build": "set \"NODE_PATH=./\" && react-scripts build",
+    "test": "set \"NODE_PATH=./\" && react-scripts test",
+    "eject": "set \"NODE_PATH=./\" && react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
