--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -19,12 +20,12 @@
     "noImplicitAny": true,
     "noEmit": true,
     "jsx": "preserve",
-    "types": [
-      "node_modules/@types"
+    "typeRoots": [
+      "node_modules/@types",
+      "@types"
     ]
   },
   "include": [
     "src"
-  ],
-  "extends": "./tsconfig.paths.json"
+  ]
 }
