--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
     "styled-components": "4.1.3",
-    "typescript": "3.3.1"
+    "typescript": "3.3.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/color": "^3.0.0",
@@ -19,6 +20,7 @@
     "@types/react-dom": "16.0.11",
     "@types/react-router-dom": "4.3.1",
     "@types/styled-components": "4.1.6",
+    "@types/webfontloader": "^1.6.29",
     "mdx.macro": "^0.2.8"
   },
   "scripts": {
