--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noImplicitAny": true,
+    "strictNullChecks": true,
     "noEmit": true,
     "jsx": "preserve",
     "typeRoots": [
