--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
   "printWidth": 100,
   "trailingComma": "all",
-  "arrowParens": "always"
+  "singleQuote": true,
+  "useTabs": false,
+  "tabWidth": 2,
+  "semi": true,
+  "bracketSpacing": true
 }
