--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/react-router-dom": "4.3.1",
     "@types/styled-components": "4.1.6",
     "@types/webfontloader": "^1.6.29",
-    "mdx.macro": "^0.2.8"
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "mdx.macro": "^0.2.8",
+    "prettier": "^1.16.4"
   },
   "scripts": {
     "start": "react-scripts start",
