--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "16.8.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
+    "react-slick": "^0.23.2",
     "styled-components": "4.1.3",
     "typescript": "3.3.1",
     "webfontloader": "^1.6.28"
@@ -19,6 +20,7 @@
     "@types/react": "16.8.2",
     "@types/react-dom": "16.0.11",
     "@types/react-router-dom": "4.3.1",
+    "@types/react-slick": "^0.23.3",
     "@types/styled-components": "4.1.6",
     "@types/webfontloader": "^1.6.29",
     "husky": "^1.3.1",
