--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "pf-01-react",
+  "name": "portfolio-reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "color": "^3.1.0",
+    "color": "3.1.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.3",
-    "react-slick": "^0.23.2",
+    "react-scripts": "2.1.8",
+    "react-slick": "0.23.2",
     "styled-components": "4.1.3",
     "typescript": "3.3.1",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "1.6.28"
   },
   "devDependencies": {
-    "@types/color": "^3.0.0",
+    "@types/color": "3.0.0",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.0.11",
     "@types/react-router-dom": "4.3.1",
-    "@types/react-slick": "^0.23.3",
+    "@types/react-slick": "0.23.3",
     "@types/styled-components": "4.1.6",
-    "@types/webfontloader": "^1.6.29",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "mdx.macro": "^0.2.8",
-    "prettier": "^1.16.4"
+    "@types/webfontloader": "1.6.29",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.5",
+    "mdx.macro": "0.2.8",
+    "prettier": "1.16.4"
   },
   "scripts": {
     "start": "react-scripts start",
