--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-reactjs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aminpaks.github.io/portfolio-reactjs",
   "dependencies": {
     "color": "3.1.0",
     "react": "16.8.1",
@@ -23,6 +24,7 @@
     "@types/react-slick": "0.23.3",
     "@types/styled-components": "4.1.6",
     "@types/webfontloader": "1.6.29",
+    "gh-pages": "^2.0.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "mdx.macro": "0.2.8",
@@ -33,7 +35,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write \"**/*.{tsx,ts}\""
+    "prettier": "prettier --write \"**/*.{tsx,ts}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
