--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@types/react-dom": "16.0.11",
     "@types/react-router-dom": "4.3.1",
     "@types/react-slick": "0.23.3",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/styled-components": "4.1.6",
     "@types/webfontloader": "1.6.29",
     "gh-pages": "^2.0.1",
     "husky": "1.3.1",
+    "jest-styled-components": "^6.3.1",
     "lint-staged": "8.1.5",
     "mdx.macro": "0.2.8",
-    "prettier": "1.16.4"
+    "prettier": "1.16.4",
+    "react-test-renderer": "^16.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
