--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://aminpaks.github.io/portfolio-reactjs",
   "dependencies": {
     "color": "3.1.0",
+    "fast-memoize": "^2.5.1",
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "react-router-dom": "4.3.1",
