--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"**/*.{tsx,ts}\"",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -m 'auto commit [ci skip]' -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
